Soporte de extensiones en peticiones de sello de tiempo y de conexiones directas por sockets
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/trunk/project@3207 dcdbb401-323c-49cf-88a0-803402807c85